--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -490,7 +490,6 @@ translateZ 속성으로 부모 요소와의 거리 조절 */
     align-items: center;
     width: 100%;
     height: 38.25rem;
-    margin-bottom: 3rem;
 }
 
 .week-artist > .artist-info{
@@ -630,7 +629,8 @@ translateZ 속성으로 부모 요소와의 거리 조절 */
 .week-recommend > .artist-trackList {
     position: relative;
     width: 100%;
-    height: 36.25rem;
+    margin-top: 3.125rem;
+    height: 100%;
 }
 
 .artist-trackList > .title-wrap {
@@ -638,6 +638,7 @@ translateZ 속성으로 부모 요소와의 거리 조절 */
     justify-content: space-between;
     width: 100%;
     height: 6.25rem;
+    margin-bottom: 2rem;
 }
 
 .title-wrap > .trackList-title {
@@ -646,6 +647,7 @@ translateZ 속성으로 부모 요소와의 거리 조절 */
 }
 
 .trackList-title > h2 {
+    line-height: 6.25rem;
     font-size: 1.2rem;
     color: #fff;
     text-transform: uppercase;
@@ -655,6 +657,7 @@ translateZ 속성으로 부모 요소와의 거리 조절 */
     position: relative;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 12rem;
     height: 100%;
 }
@@ -753,4 +756,131 @@ translateZ 속성으로 부모 요소와의 거리 조절 */
     font-weight: bold;
     font-size: 12px;
     opacity: 0.4;
+}
+
+#wrap > footer {
+    width: 100%;
+    height: 25rem;
+}
+
+footer > .footer-inner {
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem 6.25rem;
+}
+
+.footer-inner > .footer-logo {
+    width: 25rem;
+    height: 100%;
+}
+
+.footer-logo > .logo {
+    width: 100%;
+    height: 5rem;
+    margin-bottom: 3.125rem;
+}
+
+.logo > h1 {
+    text-transform: uppercase;
+    font-size: 1.8rem;
+    color: #fff;
+}
+
+.footer-logo > .copy-right {
+    width: 100%;
+    height: 3.125rem;
+}
+
+.copy-right > span {
+    font-size: 12px;
+    color: var(--text-color);
+}
+
+.footer-inner > .footer-menu {
+    position: relative;
+    display: flex;
+    width: 60%;
+    height: 100%;
+}
+
+.footer-menu > .main-menu {
+    flex: 6;
+    height: 100%;
+}
+
+.main-menu > .menu-title {
+    width: 100%;
+    height: 3.125rem;
+}
+
+.menu-title > h2 {
+    font-size: 1rem;
+    text-transform: uppercase;
+    color: var(--white-color);
+}
+
+.main-menu > ul,
+.family-menu > ul{
+    display: block;
+    width: 100%;
+    height: 3.125rem;
+    margin-top: 2rem;
+}
+
+.main-menu > ul > li,
+.family-menu > ul > li {
+    display: inline-block;
+    width: max-content;
+    height: 3.125rem;
+    margin-left: 5rem;
+}
+
+.main-menu > ul > li:first-child,
+.family-menu > ul > li:first-child{
+    margin-left: 0;
+}
+
+.main-menu > ul > li > a,
+.family-menu > ul > li > a {
+    width: 100%;
+    line-height: 3.125rem;
+    font-size: 12px;
+    color: #000;
+    text-transform: uppercase;
+    color: var(--text-color);
+}
+
+.footer-menu > .family-menu {
+    flex: 4;
+}
+
+.footer-menu > .developer-menu {
+    position: absolute;
+    width: 100%;
+    height: 3.125rem;
+    top: 15rem;
+    right: 0;
+    display: flex;
+    align-items: center;
+}
+
+.developer-menu > .menu-title {
+    width: 30%;
+    height: 3.125rem;
+}
+
+.developer-menu > .menu-title > h2 {
+    font-size: 1rem;
+    line-height: 3.125rem;
+}
+
+.developer-menu > ul {
+    width: 60%;
+    height: 100%;
+}
+
+.developer-menu > ul > li {
+    display: inline-block;
+    width: max-content;
+    margin-right: 3rem;
 }
