--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -332,7 +332,7 @@ screen container의 상단에 고정되는 비디오 wrap 영역 */
     height: 100%;
 }
 
-.introduce-video > .video-wrap {
+.introduce-video > .introduce-imageBox {
     position: relative;
     top: 50%;
     left: 50%;
@@ -342,16 +342,7 @@ screen container의 상단에 고정되는 비디오 wrap 영역 */
     overflow: hidden;
 }
 
-.video-wrap > img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.video-wrap > video {
+.introduce-imageBox > img {
     position: absolute;
     top: 0;
     left: 0;
@@ -551,7 +542,8 @@ translateZ 속성으로 부모 요소와의 거리 조절 */
 }
 
 .pick-title > p {
-    font-size: 1.2rem;
+    font-size: 1rem;
+    font-weight: 300;
     text-transform: uppercase;
     color: var(--white-color);
 }
@@ -790,7 +782,7 @@ translateZ 속성으로 부모 요소와의 거리 조절 */
     line-height: 3.125rem;
     color: var(--white-color);
     font-family: var(--font-Noto);
-    font-weight: bold;
+    font-weight: 800;
     font-size: 15px;
 }
 
@@ -798,9 +790,8 @@ translateZ 속성으로 부모 요소와의 거리 조절 */
     line-height: 3.125rem;
     color: var(--white-color);
     font-family: var(--font-Noto);
-    font-weight: bold;
+    font-weight: 300;
     font-size: 12px;
-    opacity: 0.4;
 }
 
 #wrap > footer {
@@ -838,7 +829,7 @@ footer > .footer-inner {
 
 .copy-right > span {
     font-size: 12px;
-    color: var(--text-color);
+    color: var(--white-color);
 }
 
 .footer-inner > .footer-menu {
@@ -891,9 +882,10 @@ footer > .footer-inner {
     width: 100%;
     line-height: 3.125rem;
     font-size: 12px;
+    font-weight: 100;
     color: #000;
     text-transform: uppercase;
-    color: var(--text-color);
+    color: var(--white-color);
 }
 
 .footer-menu > .family-menu {
