--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -30,187 +30,64 @@ body > #wrap {
     position: fixed;
     top: 0;
     left: 0;
-    display: flex;
-    justify-content: space-between;
     width: 100%;
-    height: 5rem;
+    height: 6.25rem;
+    padding: 0 6.25rem;
     z-index: 100;
-}
-
-header > .main-menu {
-    display: inline-flex;
-    width: 20rem;
-    height: 100%;
-}
-
-.main-menu > .guide-Button{
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 6.25rem;
-    height: 5rem;
-}
-
-.guide-Button > svg{
-    cursor: pointer;
 }
 
 /* banner logo title wrap 영역 */
 header > .logo{
-    margin-top: 6.25rem;
-    width: 40rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    height: 13rem;
+    width: 200px;
+    height: 100%;
 }
 
-.logo > .sub-title{
+.logo > h1{
     width: 100%;
-    height: 3rem;
+    line-height: 6.25rem;
     overflow: hidden;
-}
-
-.sub-title > p{
-    font-size: 1.2rem;
-    color: #fff;
-    text-align: center;
-}
-
-.logo > .main-title{
-    width: 100%;
-    height: 5rem;
-}
-
-.main-title > h1 {
-    font-size: 5rem;
-    line-height: 5rem;
-    text-transform: uppercase;
-    text-align: center;
-    color: var(--white-color);
-}
-
-header > .sub-menu {
-    display: inline-flex;
-    width: 18rem;
-    height: 100%;
-}
-
-.sub-menu > li {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 8rem;
-    height: 100%;
-}
-
-.sub-menu > li > a {
-    display: block;
-    width: 5rem;
-    height: max-content;
-    text-align: center;
-}
-
-.sub-menu > li > a > span {
-    color: var(--white-color);
-    font-family: var(--font-Noto);
+    font-family: var(--font-Unbounded);
     font-weight: 900;
-    font-size: 14px;
+    font-size: 1.5rem;
+    color: #fff;
 }
 
 /* 메인 페이지 main 컨텐츠 영역 */
 #wrap > .main-container {
-    position: relative;
     display: block;
     width: 100%;
     height: 100%;
 }
 
 /* main 컨텐츠 banner 영역 */
-.main-container > .main-banner{
+.main-container > .screen-container{
     position: relative;
     width: 100%;
     height: 100%;
-    padding-top: var(--header-height);
-}
-
-/* banner scroll event 컨텐츠 영역 */
-.main-banner > .screen-container {
-    position: relative;
-    margin-top: 20rem;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
-}
-
-/* 가로로 무한대로 흐르는 텍스트 애니메이션 부모 영역 (screen container의 하단에 고정) */
-.screen-container > .marquee-container {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 5rem;
-    overflow: hidden;
-    border-top: 2px solid #fff;
-    z-index: 10;
-}
-
-/* 줄바꿈 방지 white-space 지정 및 애니메이션 실행 영역 */
-.marquee-container > .marquee-wrap {
-    position: absolute;
-    white-space: nowrap;
-    animation: marquee 60s linear infinite;
-}
-
-.marquee-wrap > .content {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
-.content > span {
-    display: inline-block;
-    width: 40rem;
-    line-height: 5rem;
-    font-size: 1.2rem;
-    color: var(--white-color);
-    text-transform: uppercase;
-    font-weight: bold;
-    text-align: center;
-}
-
-/* 감싸고 있는 content영역 text 크기 합만큼 x축으로 이동 */
-@keyframes marquee {
-    0% {
-        transform: translateX(0);
-    }
-
-    100% {
-        transform: translateX(-120rem);
-    }
 }
 
 /*screen container의 scrollEvent가 실행 된 후 sticky로 
 screen container의 상단에 고정되는 비디오 wrap 영역 */
-.screen-container > .video-screen {
+.screen-container > .Banner {
     position: relative;
     top: 0;
     left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    width: 100%;
+    height: 300vh;
+    font-family: var(--font-Unbounded);
+}
+
+.Banner > .video-screen {
+    position: relative;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100vh;
-    overflow: hidden;
 }
 
 /*video screen 영역이 상단에 고정될 시 full screen으로 채우는 비디오 영역 */
 .video-screen > .banner_video {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 40%;
+    width: 100%;
     height: 100%;
     object-fit: cover;
     z-index: 1;
@@ -220,86 +97,66 @@ screen container의 상단에 고정되는 비디오 wrap 영역 */
 .video-screen > .screen-opacity {
     position: absolute;
     top: 0;
-    left: 50%;
-    transform: var(--center-X);
-    width: 40%;
+    left: 0;
+    width: 100%;
     height: 100%;
     content: '';
-    background-color: rgba(0, 0, 0, 0.0);
+    background-color: rgba(0, 0, 0, 0.4);
     z-index: 10;
 }
 
-/* screen container의 상단에서 20& 스크롤 될 시
-나타나는 introduce 페이지 소개 영역 */
-.screen-container > .main-introduce {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    padding: 6.25rem;
-}
-
-.main-introduce > .introduce-contents {
-    flex: 5;
-    height: 100%;
-}
-
-.introduce-contents > .contents-wrap {
-    position: relative;
+.video-screen > .dynamic-container {
+    position: absolute;
     top: 50%;
     left: 50%;
-    transform: var(--center-XY);
-    width: 40rem;
-    height: 40rem;
-}
-
-.contents-wrap > .title-wrap {
-    width: 30rem;
-    height: 15rem;
-    margin-bottom: 10rem;
-}
-
-.title-wrap > .static-txt {
-    position: relative;
+    transform: translate(-50%, -50%);
     width: 100%;
-    height: 5rem;
-    margin-bottom: 2rem;
+    height: 8rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 10;
 }
 
-.static-txt > p {
-    color: var(--white-color);
-    font-size: 1.2rem;
+.dynamic-container > .dynamic-logo {
+    position: absolute;
+    width: 40rem;
+    height: 8rem;
+    text-align: center;
+}
+
+.dynamic-logo > h1 {
+    font-size: 4rem;
+    color: #fff;
+    letter-spacing: 10px;
+    line-height: 8rem;
     text-transform: uppercase;
 }
 
-/* css 세로로 무한대로 흐르는 텍스트 css 애니메이션 영역 */
-.title-wrap > .dynamic-txt {
-    position: relative;
+.dynamic-container > .dynamic-txt {
+    position: absolute;
     width: 100%;
     height: 8rem;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .dynamic-txt > .content {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
-    height: max-content;
-    animation: txtDynamic 5s linear infinite;
+    text-align: center;
 }
 
 .content > h2 {
     display: inline-block;
     width: 100%;
     line-height: 8rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
+    font-weight: 400;
     color: var(--white-color);
     text-transform: uppercase;
 }
 
+/*
 @keyframes txtDynamic {
     0% {
         margin-top: 0;
@@ -309,50 +166,133 @@ screen container의 상단에 고정되는 비디오 wrap 영역 */
         margin-top : -16rem;
     }
 }
+*/
 
-.contents-wrap > .introduce-txt {
-    position: relative;
-    width: 35rem;
-    height: 15rem;
+.video-screen > .scroll-down {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 20rem;
+    height: 10rem;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-around;
+    bottom: 2rem;
+    z-index: 20;
 }
 
-.introduce-txt > p {
+.scroll-down > span {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 3rem;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.screen-container > .Weekly-chart{
+    width: 100%;
+    height: 200vh;
+    padding: 0 6.25rem;
+    font-family: var(--font-Unbounded);
+}
+
+.Weekly-chart > .chart-titleWrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
+    height: 30rem;
+}
+
+.chart-titleWrap  > .title {
+    width: 100%;
+    height: 8rem;
+}
+
+.chart-titleWrap  > .title > h1 {
+    width: 100%;
+    line-height: 8rem;
+    font-size: 2rem;
+    font-weight: 400;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.chart-titleWrap > .content {
+    width: 100%;
+    height: 8rem;
+}
+
+.chart-titleWrap > .content > p {
+    width: 30%;
     font-size: 1rem;
     font-family: var(--font-Noto);
+    color: #fff;
     word-break: keep-all;
-    color: var(--white-color);
 }
 
-.main-introduce > .introduce-video {
-    position: relative;
-    flex: 5;
-    height: 100%;
-}
-
-.introduce-video > .introduce-imageBox {
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: var(--center-XY);
-    width: 30rem;
-    height: 40rem;
-    overflow: hidden;
-}
-
-.introduce-imageBox > img {
-    position: absolute;
-    top: 0;
-    left: 0;
+.Weekly-chart > .pick-methods {
+    display: block;
     width: 100%;
+    height: 40rem;
+}
+
+.pick-methods > .method-item {
+    display: inline-block;
+    width: calc(100% / 3 - 20px);
     height: 100%;
-    object-fit: cover;
+    vertical-align: top;
+    margin-left: 20px;
+}
+
+.method-item:first-child {
+    margin-left: 0;
+}
+
+.method-item > .method-imgBox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 20rem;
+}
+
+.method-imgBox > svg {
+    width: 6.25rem;
+}
+
+.method-item > .method-infoBox {
+    width: 100%;
+    height: 20rem;
+}
+
+.method-infoBox > h2 {
+    line-height: 10rem;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    color: #fff;
+    text-align: center;
+}
+
+.method-infoBox > .info-txt {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.info-txt > p {
+    width: 60%;
+    font-size: 1rem;
+    text-transform: uppercase;
+    color: #fff;
+    font-family: var(--font-Noto);
+    text-align: center;
 }
 
 /*ksv 아티스트 페이지로 이동하는 영역 */
-.screen-container > .main-ksvArtist{
+.screen-container > .ksv-Artist{
     position: relative;
     top: 0;
     width: 100%;
@@ -360,7 +300,7 @@ screen container의 상단에 고정되는 비디오 wrap 영역 */
     padding: 3rem 6.25rem;
 }
 
-.main-ksvArtist > .title-wrap{
+.ksv-Artist > .title-wrap{
     width: 100%;
     height: 20rem;
 }
@@ -408,7 +348,7 @@ screen container의 상단에 고정되는 비디오 wrap 영역 */
     width: 10rem;
     line-height: 3.125rem;
     text-transform: uppercase;
-    color: #747474;
+    color: var(--white-color);
     font-weight: bold;
     font-weight: 500;
     font-size: 15px;
@@ -441,7 +381,7 @@ screen container의 상단에 고정되는 비디오 wrap 영역 */
 }
 
 /*아티스트 사진들을 활용한 css 3D 회전 이벤트 부모 영역 */
-.main-ksvArtist > .carousel-Artist {
+.ksv-Artist > .carousel-Artist {
     position: relative;
     top: 0;
     left: 0;
@@ -504,6 +444,53 @@ translateZ 속성으로 부모 요소와의 거리 조절 */
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+/* 가로로 무한대로 흐르는 텍스트 애니메이션 부모 영역 (screen container의 하단에 고정) */
+.screen-container > .marquee-container {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5rem;
+    overflow: hidden;
+    border-top: 2px solid #fff;
+    z-index: 10;
+}
+
+/* 줄바꿈 방지 white-space 지정 및 애니메이션 실행 영역 */
+.marquee-container > .marquee-wrap {
+    position: absolute;
+    white-space: nowrap;
+    animation: marquee 60s linear infinite;
+}
+
+.marquee-wrap > .content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.content > span {
+    display: inline-block;
+    width: 40rem;
+    line-height: 5rem;
+    font-size: 1rem;
+    color: var(--white-color);
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: center;
+}
+
+/* 감싸고 있는 content영역 text 크기 합만큼 x축으로 이동 */
+@keyframes marquee {
+    0% {
+        transform: translateX(0);
+    }
+
+    100% {
+        transform: translateX(-120rem);
+    }
 }
 
 .main-container > .main-contents {
