--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,6 +28,7 @@ body > .loading {
     justify-content: center;
     background-color: #000;
     z-index: 1000;
+    overflow: hidden;
 }
 
 .loading > svg {
