--- a/src/styles/chart.css
+++ b/src/styles/chart.css
@@ -1,20 +1,11 @@
 @import "./global.css";
 
-*{
-    margin : 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-}
-
 body {
     display: flex;
     align-items: center;
     justify-content: center;
     font-family: var(--font-Noto);
     background-color: #000000;
-    overflow: hidden;
 }
 
 /* body 내부 컨텐츠 영역 */
@@ -24,34 +15,6 @@ body > #wrap {
     left: 0;
     width: 100%;
     height: 100%;
-}
-
-/* header 영역 */
-#wrap > header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 6.25rem;
-    padding: 0 6.25rem;
-    z-index: 100;
-}
-
-/* header logo 제목 영역 */
-header > .logo{
-    width: 200px;
-    height: 100%;
-}
-
-.logo > h1{
-    width: 100%;
-    line-height: 6.25rem;
-    overflow: hidden;
-    font-weight: 900;
-    font-size: 1.5rem;
-    text-transform: uppercase;
-    font-family: var(--font-Unbounded);
-    color: #fff;
 }
 
 /* 차트 페이지 main 컨텐츠 영역 */
@@ -90,12 +53,31 @@ header > .logo{
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 30rem;
+    height: 28rem;
+}
+
+.weeklyChart-dashboard > .weeklyArtist-imgBox {
+    width: 28rem;
+    height: 100%;
+}
+
+.weeklyArtist-imgBox > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.weeklyChart-dashboard > .data-wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 70%;
+    height: 100%;
 }
 
 /* 주간 아티스트 1위 데이터 영역 */
-.weeklyChart-dashboard > .weeklyChart-data {
-    width: 30%;
+.data-wrap > .weeklyChart-data {
+    width: 35%;
     height: 100%;
 }
 
@@ -103,7 +85,7 @@ header > .logo{
 .weeklyChart-data > .weekly-artist {
     position: relative;
     width: 100%;
-    height: calc(15rem - 1rem);
+    height: calc(28rem / 2 - 1rem);
     padding: 2rem;
     background-color: rgba(119,119,119,0.2);
 }
@@ -116,17 +98,17 @@ header > .logo{
 /* 아티스트 이름 */
 .artist-wrap > .artist-name {
     width: 100%;
-    height: 6rem;
+    height: 5rem;
     overflow: hidden;
 }
 
 .artist-name > span {
     position: relative;
-    top: 6rem;
+    top: 5rem;
     font-weight: bold;
     color: #fff;
     font-size: 1.8rem;
-    line-height: 6rem;
+    line-height: 5rem;
     transition: all 0.5s ease-in-out;
 }
 
@@ -157,7 +139,7 @@ header > .logo{
 .weeklyChart-data > .count-track {
     position: relative;
     width: 100%;
-    height: calc(15rem - 1rem);
+    height: calc(28rem / 2 - 1rem);
     margin-top: 2rem;
     padding: 2rem;
     background-color: rgba(119,119,119,0.2);
@@ -171,17 +153,17 @@ header > .logo{
 /* 곡 카운트 데이터 영역 */
 .count-wrap > .count {
     width: 100%;
-    height: 6rem;
+    height: 4rem;
     overflow: hidden;
 }
 
 .count > span {
     position: relative;
-    top: 6rem;
+    top: 5rem;
     font-weight: bold;
     color: #fff;
     font-size: 1.8rem;
-    line-height: 6rem;
+    line-height: 5rem;
     transition: all 0.5s ease-in-out;
 }
 
@@ -210,9 +192,11 @@ header > .logo{
 }
 
 /* 주간 차트 아티스트 순위 그래프 */
-.weeklyChart-dashboard > .weeklyChart-graph {
+.data-wrap > .weeklyChart-graph {
     width: 60%;
     height: 100%;
+    padding: 0 2rem;
+    background-color: rgba(119,119,119,0.2);
 }
 
 /* 차트 그래프(canvas) 부모 영역 */
@@ -222,4 +206,28 @@ header > .logo{
     align-items: center;
     width: 100%;
     height: 100%;
+}
+
+.main-container > .weeklyArtist-album {
+    margin: 0 auto;
+    max-width: 1400px;
+    height: 100%;
+    margin-top: 6.25rem;
+    padding: 5rem 0;
+}
+
+.weeklyArtist-album > .weeklyArtist-title {
+    width: 100%;
+    height: 5rem;
+}
+
+.weeklyArtist-title > h1 {
+    line-height: 5rem;
+    font-size: 1.5rem;
+    color: #fff;
+    font-weight: 300;
+}
+
+.weeklyArtist-Album > .album-list {
+    
 }
