--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,7 @@
     font-style: normal;
 }
 
+/* 전역 속성 변수 */
 :root {
     --font-Unbounded : 'Unbounded', sans-serif;
     --font-Noto : 'SEBANG_Regular', sans-serif;
@@ -27,6 +28,74 @@
     --center-XY : translate(-50%, -50%);
 }
 
-html::-webkit-scrollbar {
-    display: none;
+*{
+    margin : 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
+
+html::-webkit-scrollbar {
+    width: 10px;
+}
+
+html::-webkit-scrollbar-thumb {
+    width: 10px;
+    background-color: #fff;
+}
+
+/*header 영역*/
+#wrap > header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 5rem;
+    padding: 0 6.25rem;
+    z-index: 100;
+    font-family: var(--font-Unbounded);
+}
+
+/* banner logo title wrap 영역 */
+header > .logo{
+    display: inline-block;
+    width: 200px;
+    height: 100%;
+}
+
+.logo > a {
+    width: 100%;
+}
+
+a > h1{
+    width: 100%;
+    line-height: 5rem;
+    font-weight: 900;
+    font-size: 1.5rem;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+header > nav {
+    display: inline-block;
+    vertical-align: top;
+    width: max-content;
+    height: 100%;
+}
+
+nav > .menu-button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 15rem;
+    height: 100%;
+}
+
+.menu-button > a {
+    font-size: 14px;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
