--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -55,6 +55,7 @@ html::-webkit-scrollbar-thumb {
     padding: 0 6.25rem;
     z-index: 100;
     font-family: var(--font-Unbounded);
+    transition: all 1s ease-in-out;
 }
 
 /* banner logo title wrap 영역 */
@@ -97,5 +98,135 @@ nav > .menu-button {
     color: #fff;
     text-transform: uppercase;
     font-weight: bold;
+}
+
+#wrap > footer {
+    width: 100%;
+    height: 25rem;
+    font-family: var(--font-Unbounded);
+}
+
+footer > .footer-inner {
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem 6.25rem;
+}
+
+.footer-inner > .footer-logo {
+    width: 25rem;
+    height: 100%;
+}
+
+.footer-logo > .logo {
+    width: 100%;
+    height: 5rem;
+    margin-bottom: 3.125rem;
+}
+
+.logo > h1 {
+    text-transform: uppercase;
+    font-size: 1.8rem;
+    color: #fff;
+}
+
+.footer-logo > .copy-right {
+    width: 100%;
+    height: 3.125rem;
+}
+
+.copy-right > span {
+    font-size: 12px;
+    color: var(--white-color);
+}
+
+.footer-inner > .footer-menu {
+    position: relative;
+    display: flex;
+    width: 60%;
+    height: 100%;
+}
+
+.footer-menu > .main-menu {
+    flex: 6;
+    height: 100%;
+}
+
+.main-menu > .menu-title,
+.family-menu > .menu-title {
+    width: 100%;
+    height: 3.125rem;
+}
+
+.menu-title > h2 {
+    font-size: 1rem;
+    text-transform: uppercase;
+    color: var(--white-color);
+}
+
+.main-menu > ul,
+.family-menu > ul{
+    display: block;
+    width: 100%;
+    height: 3.125rem;
+    margin-top: 2rem;
+}
+
+.main-menu > ul > li,
+.family-menu > ul > li {
+    display: inline-block;
+    width: max-content;
+    height: 3.125rem;
+    margin-left: 5rem;
+}
+
+.main-menu > ul > li:first-child,
+.family-menu > ul > li:first-child{
+    margin-left: 0;
+}
+
+.main-menu > ul > li > a,
+.family-menu > ul > li > a {
+    width: 100%;
+    line-height: 3.125rem;
+    font-size: 12px;
+    font-weight: 100;
+    color: #000;
+    text-transform: uppercase;
+    color: var(--white-color);
+}
+
+.footer-menu > .family-menu {
+    flex: 4;
+}
+
+.footer-menu > .developer-menu {
+    position: absolute;
+    width: 100%;
+    height: 3.125rem;
+    top: 15rem;
+    right: 0;
+    display: flex;
+    align-items: center;
+}
+
+.developer-menu > .menu-title {
+    width: 30%;
+    height: 3.125rem;
+}
+
+.developer-menu > .menu-title > h2 {
+    font-size: 1rem;
+    line-height: 3.125rem;
+}
+
+.developer-menu > ul {
+    width: 60%;
+    height: 100%;
+}
+
+.developer-menu > ul > li {
+    display: inline-block;
+    width: max-content;
+    margin-right: 3rem;
 }
 
